# sweepexp

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: lint.yml  mpi_test.yml  test.yml
docs/: README.md  requirements.txt
docs/source/: conf.py  custom_scraper.py  getting_started.rst  index.rst  installation.rst  package_api.rst  usage.rst
docs/source/_templates/autosummary/: class.rst  custom_module.rst  module.rst
docs/source/usage/: custom_input_arguments.rst  index.rst  logging.rst  mpi.rst  multidimensional_output.rst  priorities.rst  return_types.rst  saving.rst  status.rst  timeit.rst  uuid.rst
src/sweepexp/: __init__.py  logger.py  sweepexp.py  sweepexp_base.py  sweepexp_mpi.py  sweepexp_parallel.py  sweepexp_sequential.py
tests/: conftest.py  test_init.py  test_sweepexp.py  test_sweepexp_base.py  test_sweepexp_mpi.py  test_sweepexp_parallel.py  test_sweepexp_sequential.py
